<resources>
    <string name="app_name">MyMessenger</string>
    <string name="action_settings">Settings</string>
    <string name="profile_name">Username</string>
    <string name="status">Status:</string>
    <string name="status_content">Empty status</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="edit_profile_photo">Change icon:</string>
    <string name="edit_profile_name">Change name:</string>
    <string name="edit_profile_status">Change status:</string>
    <string name="edit_profile_image_set_suc">Your icon changed</string>
    <string name="edit_profile_image_set_fail">Failed icon set</string>
    <string name="users_profile_button_message">send a message</string>
    <string name="title_activity_users_profile">A user profile</string>
    <string name="text_input_filed">Start typing..</string>
    <string name="MessagingLabel">chat</string>
    <string name="signOut">Sign out</string>
    <string name="attach_file">Attach file</string>
    <string name="detach_file">Detach file</string>
    <string name="attach_image">Attach image</string>
    <string name="detach_image">Detach image</string>
    <string name="attach_activity_title">Attach files...</string>
    <string name="attach_photo">Attach photo</string>
    <string name="on_image_attached">Image was attached to message!</string>
    <string name="on_photo_attached">Photo was attached to message!</string>
    <string name="on_file_attached">File was attached to message!</string>
    <string name="on_image_detached">Image was detached from message!</string>
    <string name="on_file_detached">File was detached from message!</string>
    <string name="delete">Delete</string>
    <string name="group_chat_creating_title">Creating group chat</string>
    <string name="select_chat_icon">Select chat icon:</string>
    <string name="select_icon">select icon</string>
    <string name="submit">Submit</string>
    <string name="pick_users_group">Pick participants:</string>
    <string name="select_chat_icon_added">Select chat icon (already selected):</string>
    <string name="leave_chat">Leave chat</string>
    <string name="add_users_to_chat">Add users to chat</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="channel_name_hint">Name of channel</string>
    <string name="channel_link_hint">Link</string>
    <string name="add">Add</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_add_title">New channel:</string>
    <string name="error_dialog_link_valid">Not valid link</string>
    <string name="error_dialog_empty">Enter channel name and link</string>
    <string name="error_dialog_link_unsup">Unsupported link</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="error_no_internet">Internet connection lost</string>
    <string name="dialog_edit_title">Edit channel:</string>
    <string name="settings_title">Settings</string>
    <string name="settings_period">News refresh time:</string>
    <string name="settings_lang">Language:</string>
    <string name="share_news">Share news</string>
    <string name="share_activity_title">Choose a channel to share</string>
    <string name="choose_users">Choose users:</string>
    <string name="show_users_in_chat">Show users in chat</string>
    <string name="show_users_in_chat_title">Users of</string>
</resources>
