<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAttach"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="@string/attach_activity_title">
            </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <Button
        android:id="@+id/attachImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attach_image"/>
    <Button
        android:id="@+id/attachPhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attach_photo"/>
    <Button
        android:id="@+id/detachImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detach_image"/>
    <Button
        android:id="@+id/attachFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attach_file"/>
    <Button
        android:id="@+id/detachFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detach_file"/>
</LinearLayout>