<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppToolbarGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarGroup"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="@string/group_chat_creating_title"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter name:"/>
        <EditText
            android:id="@+id/nameInputGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/iconNameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_chat_icon"/>
        <Button
            android:id="@+id/selectIconButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_users_group"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/submitGroupChatButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/submit"/>
</LinearLayout>